--- a/Code/src/web/views/about-fiu.jade
+++ b/Code/src/web/views/about-fiu.jade
@@ -706,7 +706,7 @@ block content
     div.container
         div.row
             div.col-xl-3.hidden-lg.hidden-md.hidden-sm.hidden-xs
-                a(href='#' target='_blank')
+                a(href='https://www.linkedin.com/in/john-burke-b3255086' target='_blank')
                     | #[img( src="/img/burke.jpg" alt="", width=300)]
                 h4.strong Burke, John
                 p jburk045@fiu.edu
@@ -724,7 +724,7 @@ block content
                 br
                 br
             div.col-xl-3.hidden-lg.hidden-md.hidden-sm.hidden-xs
-                a(href='https://www.linkedin.com/in/jorgejmr89?authType=NAME_SEARCH&authToken=1YSM&locale=en_US&srchid=3059198301469028334228&srchindex=1&srchtotal=2537&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A3059198301469028334228%2CVSRPtargetId%3A249738638%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH' target='_blank')
+                a(href='https://www.linkedin.com/in/jorgejmr89' target='_blank')
                     | #[img( src="/img/medina_j.png" alt="", width=300)]
                 h4.strong Medina, Jorge
                 p jmedi116@fiu.edu
@@ -742,7 +742,7 @@ block content
                 br
                 br
             div.hidden-xl.col-lg-8.hidden-md.hidden-sm.hidden-xs
-                a(href='#' target='_blank')
+                a(href='https://www.linkedin.com/in/john-burke-b3255086' target='_blank')
                     | #[img( src="/img/burke.jpg" alt="", width=300)]
                 h4.strong Burke, John
                 p jburk045@fiu.edu
@@ -760,7 +760,7 @@ block content
                 br
                 br
             div.hidden-xl.col-lg-8.hidden-md.hidden-sm.hidden-xs
-                a(href='https://www.linkedin.com/in/jorgejmr89?authType=NAME_SEARCH&authToken=1YSM&locale=en_US&srchid=3059198301469028334228&srchindex=1&srchtotal=2537&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A3059198301469028334228%2CVSRPtargetId%3A249738638%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH' target='_blank')
+                a(href='https://www.linkedin.com/in/jorgejmr89' target='_blank')
                     | #[img( src="/img/medina_j.png" alt="", width=300)]
                 h4.strong Medina, Jorge
                 p jmedi116@fiu.edu
@@ -779,7 +779,7 @@ block content
                 br
         div.row
             div.hidden-xl.hidden-lg.col-md-8.col-sm-8.hidden-xs
-                a(href='#' target='_blank')
+                a(href='https://www.linkedin.com/in/john-burke-b3255086' target='_blank')
                     | #[img( src="/img/burke.jpg" alt="", width=200)]
                 h4.strong Burke, John
                 p jburk045@fiu.edu
@@ -798,7 +798,7 @@ block content
                 br
         div.row
             div.hidden-xl.hidden-lg.col-md-8.col-sm-8.hidden-xs
-                a(href='https://www.linkedin.com/in/jorgejmr89?authType=NAME_SEARCH&authToken=1YSM&locale=en_US&srchid=3059198301469028334228&srchindex=1&srchtotal=2537&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A3059198301469028334228%2CVSRPtargetId%3A249738638%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH' target='_blank')
+                a(href='https://www.linkedin.com/in/jorgejmr89' target='_blank')
                     | #[img( src="/img/medina_j.png" alt="", width=200)]
                 h4.strong Medina, Jorge
                 p jmedi116@fiu.edu
@@ -817,7 +817,7 @@ block content
                 br
         div.row
             div.hidden-xl.hidden-lg.hidden-md.hidden-sm.col-xs-12
-                a(href='#' target='_blank')
+                a(href='https://www.linkedin.com/in/john-burke-b3255086' target='_blank')
                     | #[img( src="/img/burke.jpg" alt="", width=200)]
                 h4.strong Burke, John
                 p jburk045@fiu.edu
@@ -837,7 +837,7 @@ block content
                 br
         div.row
             div.hidden-xl.hidden-lg.hidden-md.hidden-sm.col-xs-12
-                a(href='https://www.linkedin.com/in/jorgejmr89?authType=NAME_SEARCH&authToken=1YSM&locale=en_US&srchid=3059198301469028334228&srchindex=1&srchtotal=2537&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A3059198301469028334228%2CVSRPtargetId%3A249738638%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH' target='_blank')
+                a(href='https://www.linkedin.com/in/jorgejmr89?' target='_blank')
                     | #[img( src="/img/medina_j.png" alt="", width=200)]
                 h4.strong Medina, Jorge
                 p jmedi116@fiu.edu
